sg.tf
# security groups


resource "aws_security_group" "web_sg" {
  name        = "web-sg"
  description = "Security group with TCP ports 22, 80, and 8080 open"
  vpc_id      = aws_vpc.my-vpc.id

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Replace with your IP
  }

  tags = {
    Name = "web-sg"
  }

}
